# dotsuite

./: .gitignore  .gitmodules  404.html  Makefile  README.md  dot-notation-universe.md  index.html  mkdocs.yml  proposal-collections-pillar.md  pyproject.toml  search.html  sitemap.xml
docs/: dot-formalism.md  dot-notation-universe.md  ecosystem.md  getting-started.md  index.md  jaf-comparison.md  philosophy.md  proposal-collections-pillar.md
docs/tools/collections/: dotfilter.md  dotrelate.md
docs/tools/depth/: dotget.md  dotstar.md
docs/tools/shape/: dotbatch.md  dotmod.md  dotpipe.md  dotpluck.md
docs/tools/truth/: dotall.md  dotany.md  dotequals.md  dotexists.md  dotquery.md
dot-formalism/: index.html
dot-notation-universe/: index.html
ecosystem/: index.html
examples/dotget/: basic.py  steal_this.py
examples/dotstar/: basic.py  patterns.py
getting-started/: index.html
jaf-comparison/: index.html
philosophy/: index.html
proposal-collections-pillar/: index.html
scripts/: mdcat.py
search/: search_index.json
src/collections/dotfilter/: __init__.py  cli.py  core.py
src/collections/dotrelate/: .gitignore  cli.py  core.py
src/depth/dotget/: __init__.py  cli.py  core.py  path.py
src/depth/dotpath/: .gitignore  __init__.py  cli.py  core.py  segments.py
src/depth/dotselect/: __init__.py  cli.py  core.py
src/depth/dotstar/: __init__.py  cli.py  core.py  dotstar.py
src/shape/dotbatch/: __init__.py  cli.py  core.py
src/shape/dotmod/: __init__.py  cli.py  core.py
src/shape/dotpipe/: __init__.py  cli.py  core.py
src/shape/dotpluck/: __init__.py  cli.py  core.py
src/truth/dotany/: __init__.py  cli.py  core.py
src/truth/dotequals/: __init__.py  cli.py  core.py
src/truth/dotexists/: __init__.py  cli.py  core.py
src/truth/dotquery/: __init__.py  cli.py  core.py  dsl.py  queryset.py
tests/test_collections/: test_dotfilter.py  test_dotrelate.py
tests/test_depth/: test_dotget.py  test_dotstar.py
tests/test_shape/: test_dotbatch.py  test_dotmod.py  test_dotpipe.py  test_dotpluck.py
tests/test_truth/: test_dotall.py  test_dotany.py  test_dotequals.py  test_dotexists.py  test_dotquery.py  test_dotquery_dsl.py
tests/tests-dotget/: test_basic.py
tests/tests_dotstar/: test_search.py
tools/collections/dotfilter/: index.html
tools/collections/dotrelate/: index.html
tools/depth/dotget/: index.html
tools/depth/dotstar/: index.html
tools/shape/dotbatch/: index.html
tools/shape/dotmod/: index.html
tools/shape/dotpipe/: index.html
tools/shape/dotpluck/: index.html
tools/truth/dotall/: index.html
tools/truth/dotany/: index.html
tools/truth/dotequals/: index.html
tools/truth/dotexists/: index.html
tools/truth/dotquery/: index.html
