[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotsuite"
version = "0.1.0"
description = "A meta-package to install the complete dot ecosystem."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Alex Towell", email = "lex@metafunctor.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
dotbatch = "dotbatch.cli:main"
dotquery = "dotquery.cli:main"
dotrelate = "dotrelate.cli:cli"
dotall = "dotsall.cli:main"

[project.urls]
Homepage = "https://github.com/queelius/dotsuite"
