[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotsuite"
version = "0.1.0"
description = "A meta-package to install the complete dot ecosystem."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Alex Towell", email = "lex@metafunctor.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
# Depth pillar - Data location & extraction
dotget = "depth.dotget.cli:main"
dotstar = "depth.dotstar.cli:main"
dotselect = "depth.dotselect.cli:main"
dotpath = "depth.dotpath.cli:main"

# Truth pillar - Boolean logic & validation
dotexists = "truth.dotexists.cli:main"
dotequals = "truth.dotequals.cli:main"
dotany = "truth.dotany.cli:main"
dotall = "truth.dotall.cli:main"
dotquery = "truth.dotquery.cli:main"

# Shape pillar - Data transformation
dotmod = "shape.dotmod.cli:main"
dotbatch = "shape.dotbatch.cli:main"
dotpipe = "shape.dotpipe.cli:main"
dotpluck = "shape.dotpluck.cli:main"

# Collections pillar - Set operations
dotfilter = "collections.dotfilter.cli:main"
dotrelate = "collections.dotrelate.cli:main"

[project.urls]
Homepage = "https://github.com/queelius/dotsuite"

[tool.hatch.build.targets.wheel]
packages = ["src/depth", "src/truth", "src/shape", "src/collections"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0"
]
